--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -1,5 +1,12 @@
 @import url(../../css/main.css);
-
+/* ||General HTML  */
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+/* || component styles */
 .avatar img{
     border-radius: 50%; 
     margin: 1rem;
@@ -22,3 +29,5 @@
 .avatar-sq img{
     border-radius: 0%;
 }
+
+
