--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -14,6 +14,10 @@
         <div class="wrapper">
             <h1>Avatar</h1>
             <h2>Normal avatar</h2>
+            <p>Avatar is applied on photos, icons and can be created by inseting <code>img</code> tag inside avatar
+                class
+                avatar is basic class which has <code>width:10rem</code>
+            </p>
             <div class="avatar-container">
                 <div class="avatar">
                     <img src="../../assets/images/avatar-svgrepo-com.svg" alt="avatar large">
@@ -25,7 +29,15 @@
                     <img src="../../assets/images/butler-avatar.svg" alt="avatar small">
                 </div>
             </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28106%2C46%2C46%2C1%29&t=base16-light&wt=none&l=css&width=600&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2522%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2522%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2522%253E%250A%253C%252Fdiv%253E"
+                style="width: 600px; height: 289px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
             <h2>Avatar Sizes</h2>
+            In sizes we have three types: <code>avatar-xl</code> extra large, <code>avatar-md</code> medium size,
+            <code>avatar-sm</code> small size.
+            Don't forget to put <code>avatar</code> class before these as it provides that round shape
             <div class="avatar-container">
                 <div class="avatar avatar-xl">
                     <img src="../../assets/images/avatar-svgrepo-com.svg" alt="avatar large">
@@ -37,12 +49,23 @@
                     <img src="../../assets/images/butler-avatar.svg" alt="avatar small">
                 </div>
             </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28106%2C46%2C46%2C1%29&t=base16-light&wt=none&l=css&width=600&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar%2520avatar-xl%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2520large%2522%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522avatar%2520avatar-md%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2520medium%2522%253E%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522avatar%2520avatar-sm%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2520small%2522%253E%250A%253C%252Fdiv%253E"
+                style="width: 600px; height: 289px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
             <h2>Avatar square</h2>
+            <code>avatar-sq</code> provides square shape to avatar
             <div class="avatar-container">
                 <div class="avatar avatar-sq">
-                    <img src="../../assets/images/avatar-svgrepo-com.svg" alt="avatar large">
+                    <img src="../../assets/images/avatar-svgrepo-com.svg" alt="avatar square">
                 </div>
             </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28106%2C46%2C46%2C1%29&t=base16-light&wt=none&l=css&width=600&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar%2520avatar-sq%2522%253E%250A%2509%253Cimg%2520src%253D%2522...%2522%2520alt%253D%2522avatar%2520square%2522%253E%250A%253C%252Fdiv%253E"
+                style="width: 600px; height: 134px; border:0; transform: scale(1); overflow:hidden;"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
         </div>
     </main>
 </body>
