--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&family=Roboto+Slab:wght@600&display=swap');
+/* || General HTML */
 html{
     font-size: 62.5%;
+    font-family: 'Roboto Slab', serif;
+}
+body{
+    font-size: 160%;
+}
+code{
+    font-size: 120%;
+    background-color: #E9DAC1;
+    padding: 0.1rem 0.3rem;
+    border-radius: 9%;
+}
+iframe{
+    width: 30rem;
 }
