--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&family=Roboto+Slab:wght@600&display=swap');
+@import url('https://use.fontawesome.com/releases/v5.15.4/css/all.css');
+
 /* || General HTML */
-html{
+html {
     font-size: 62.5%;
     font-family: 'Roboto Slab', serif;
 }
-body{
+
+body {
     font-size: 160%;
 }
-code{
+
+code {
     font-size: 120%;
     background-color: #E9DAC1;
     padding: 0.1rem 0.3rem;
     border-radius: 9%;
 }
-iframe{
-    width: 30rem;
+
+iframe {
+    width: 70rem;
+    height: 17rem;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
