--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ iframe {
 
 main {
     display: flex;
-    justify-content: center;
     align-items: center;
     min-height: 100vh;
+    margin-left: 6rem;
 }
