--- a/components/badge/badge.html
+++ b/components/badge/badge.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
     <title>Badge|Sharp UI</title>
     <link rel="stylesheet" href="./badge.css">
 </head>
@@ -29,6 +30,19 @@
                     <span class="badge-sm badge-invisible"></span>
                 </div>
             </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28184%2C0%2C0%2C1%29&t=base16-light&wt=none&l=css&width=680&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar-container%2522%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-xl%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522..%252F..%252Fassets%252Fimages%252Favatar-svgrepo-com.svg%2522%2520%2509%2509%2509%2509%2509alt%253D%2522avatar%2520large%252Conline%2520mode%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-lg%2520badge-online%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-md%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522..%252F..%252Fassets%252Fimages%252Ffemale-avatar.svg%2522%2520%250A%2509%2509%2509alt%253D%2522avatar%2520medium%252C%2520offline%2520mode%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-md%2520badge-offline%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-sm%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522..%252F..%252Fassets%252Fimages%252Fbutler-avatar.svg%2522%2520%250A%2509%2509%2509alt%253D%2522avatar%2520small%252C%2520do%2520not%2520disturb%2520me%2520mode%2522%253E%250A%2509%2509%2509%253Cspan%2520class%253D%2522badge-sm%2520badge-invisible%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
+            <h2>Badges on icons</h2>
+            <div class="badge-container">
+                <i class="fas fa-bell"><span class="badge-count">8</span></i>
+                <i class="fas fa-shopping-cart"><span class="badge-count">7</span></i>
+            </div>
+            <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28184%2C0%2C0%2C1%29&t=base16-light&wt=none&l=css&width=680&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522badge-container%2522%253E%250A%2509%253Ci%2520class%253D%2522fas%2520fa-bell%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-count%2522%253E8%253C%252Fspan%253E%250A%2509%253C%252Fi%253E%250A%2509%253Ci%2520class%253D%2522fas%2520fa-shopping-cart%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-count%2522%253E7%253C%252Fspan%253E%250A%2509%253C%252Fi%253E%250A%253C%252Fdiv%253E"
+                sandbox="allow-scripts allow-same-origin">
+            </iframe>
         </div>
     </main>
 </body>
