--- a/components/button/button.html
+++ b/components/button/button.html
@@ -33,7 +33,7 @@
 
             <h2>Buttons by size</h2>
             <div class="button-container">
-                <button class="btn btn-primary btn-xl">Large</button>
+                <button class="btn btn-primary btn-lg">Large</button>
                 <button class="btn btn-secondary btn-md">Medium</button>
                 <button class="btn btn-default btn-sm">Small</button>
             </div>
