--- a/components/button/button.html
+++ b/components/button/button.html
@@ -40,15 +40,15 @@
 
             <h2>Buttons with icons</h2>
             <div class="button-container">
-                <button class="btn btn-primary">
+                <button class="btn btn-icon btn-primary">
                     <i class="fas fa-shopping-cart"></i>
                     Add to cart
                 </button>
-                <button class="btn btn-secondary">
+                <button class="btn btn-icon btn-secondary">
                     <i class="fas fa-trash-alt"></i>
                     Delete
                 </button>
-                <button class="btn btn-default">
+                <button class="btn btn-icon btn-default">
                     <i class="fas fa-cloud-upload-alt"></i>
                     Upload
                 </button>
