--- a/components/button/button.html
+++ b/components/button/button.html
@@ -23,6 +23,9 @@
                 <button class="btn btn-secondary">Secondary</button>
                 <button class="btn btn-disabled">Disabled</button>
             </div>
+            <script
+                src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fprimary-button-styles.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on">
+            </script>
 
             <h2>Outline buttons</h2>
             <p>Usually used for seconday buttons which user may click</p>
@@ -30,6 +33,9 @@
                 <button class="btn btn-outline-primary">Primary</button>
                 <button class="btn btn-outline-secondary">Secondary</button>
             </div>
+            <script
+                src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Foutline-buttons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on">
+            </script>
 
             <h2>Buttons by size</h2>
             <div class="button-container">
@@ -37,6 +43,9 @@
                 <button class="btn btn-secondary btn-md">Medium</button>
                 <button class="btn btn-default btn-sm">Small</button>
             </div>
+            <script
+                src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbutton-with-size.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on">
+            </script>
 
             <h2>Buttons with icons</h2>
             <div class="button-container">
@@ -57,6 +66,9 @@
                     Sign in/up
                 </button>
             </div>
+            <script
+                src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbuttons-icons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on">
+            </script>
 
             <h2>Floating action buttons</h2>
             <p>These acts as toggle buttons</p>
@@ -71,6 +83,10 @@
                     <i class="fas fa-pencil-alt"></i>
                 </button>
             </div>
+            <script
+                src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Ffloat.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on">
+            </script>
+
         </div>
     </main>
 </body>
