--- a/components/card/card.html
+++ b/components/card/card.html
@@ -30,25 +30,29 @@
           <!-- continue from here -->
           <div class="card card-social-media">
             <div class="card-media-header">
-              <div class="avatar avatar-sm">
+              <div class="card-media-first avatar avatar-sm">
                 <img src="../../assets/images/avatar-svgrepo-com.svg" alt="" />
+                <span>
+                  <h3>Name</h3>
+                  <p>8 hours ago</p>
+                </span>
               </div>
-              <h3>Name</h3>
-              <p>8 hours ago</p>
+              <i class="fas fa-ellipsis-v"></i>
             </div>
-            <img src="https://picsum.photos/200" alt="random image" />
-            <caption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </caption>
+            <div class="card-social-main-img">
+              <img src="https://picsum.photos/200" alt="random image" />
+            </div>
+            <div class="card-social-discrip">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
             <div class="card-media-actionables">
               <div class="card-icons">
                 <span class="card-icons-start">
-                  <i class="fas fa-heart"></i>
-                  <i class="fas fa-comment"></i>
-                  <i class="fas fa-share"></i>
+                  <i class="far fa-heart"></i>
+                  <i class="far fa-comment"></i>
                 </span>
                 <span class="card-icons-end">
-                  <i class="fas fa-bookmark"></i>
+                  <i class="far fa-bookmark"></i>
                 </span>
               </div>
             </div>
