--- a/components/card/card.html
+++ b/components/card/card.html
@@ -40,7 +40,7 @@
               <i class="fas fa-ellipsis-v"></i>
             </div>
             <div class="card-social-main-img">
-              <img src="https://picsum.photos/200" alt="random image" />
+              <img src="../../assets/images/simon-lee.jpg" alt="random image" />
             </div>
             <div class="card-social-discrip">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -61,7 +61,7 @@
           <h2>Dismissible Image Card</h2>
           <div class="card card-dismiss">
             <div class="card-dismiss-img">
-              <img src="https://picsum.photos/200" alt="random image" />
+              <img src="../../assets/images/simon-lee.jpg" alt="random image" />
               <i class="fas fa-times"></i>
             </div>
             <div class="card-dismiss-title">
@@ -69,24 +69,27 @@
               <p>author name</p>
             </div>
             <div class="card-dismiss-content">
-              orem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum
               ipsum itaque adipisci dolores ipsa.
             </div>
             <div class="card-dismiss-footer">
               <button class="btn btn-secondary">Read more</button>
-              <i class="fas fa-heart"></i>
-              <i class="fas fa-comment"></i>
-              <i class="fas fa-share"></i>
-              <i class="fas fa-bookmark"></i>
+              <div class="card-icons">
+                <i class="far fa-heart"></i>
+                <i class="far fa-comment"></i>
+                <i class="far fa-bookmark"></i>
+              </div>
             </div>
           </div>
 
           <h2>Text Overlay Card</h2>
           <div class="card card-text-overlay">
-            <img src="https://picsum.photos/200" alt="random image" />
+            <img src="../../assets/images/simon-lee.jpg" alt="random image" />
             <div class="card-text-overlay-header">
-              <h3>Card Title</h3>
-              <p>Sub Title</p>
+              <span>
+                <h3>Card Title</h3>
+                <p>Sub Title</p>
+              </span>
               <i class="fas fa-ellipsis-h"></i>
             </div>
             <div class="card-text-overlay-footer">
@@ -104,76 +107,10 @@
           </div>
 
           <h2>Ecommerce Card</h2>
-          <div class="card card-xl card-ecommerce">
+          <div class="card card-ecommerce">
             <div class="card-ecom-header">
-              <img src="https://picsum.photos/200" alt="random image" />
-              <i class="fas fa-bookmark"></i>
-            </div>
-            <div class="card-ecom-title">
-              <h3>Card Title</h3>
-              <p>author name</p>
-            </div>
-            <div class="card-ecom-price">
-              <span class="price-show">
-                <strike>3499₹</strike>
-                <p>999₹</p>
-              </span>
-              <span class="price-change">
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-minus"></i>
-                </button>
-                <p>3</p>
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </span>
-            </div>
-            <div class="card-ecom-footer">
-              <button class="btn btn-primary">
-                <i class="fas fa-shopping-cart"></i>Add to cart
-              </button>
-              <button class="btn btn-primary">
-                <i class="fas fa-list-ul"></i>Add to Wishlist
-              </button>
-            </div>
-          </div>
-          <div class="card card-md card-ecommerce">
-            <div class="card-ecom-header">
-              <img src="https://picsum.photos/200" alt="random image" />
-              <i class="fas fa-bookmark"></i>
-            </div>
-            <div class="card-ecom-title">
-              <h3>Card Title</h3>
-              <p>author name</p>
-            </div>
-            <div class="card-ecom-price">
-              <span class="price-show">
-                <strike>3499₹</strike>
-                <p>999₹</p>
-              </span>
-              <span class="price-change">
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-minus"></i>
-                </button>
-                <p>3</p>
-                <button class="btn btn-float btn-primary">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </span>
-            </div>
-            <div class="card-ecom-footer">
-              <button class="btn btn-primary">
-                <i class="fas fa-shopping-cart"></i>Add to cart
-              </button>
-              <button class="btn btn-primary">
-                <i class="fas fa-list-ul"></i>Add to Wishlist
-              </button>
-            </div>
-          </div>
-          <div class="card card-sm card-ecommerce">
-            <div class="card-ecom-header">
-              <img src="https://picsum.photos/200" alt="random image" />
-              <i class="fas fa-bookmark"></i>
+              <img src="../../assets/images/simon-lee.jpg" alt="random image" />
+              <i class="fas fa-bookmark">25% off</i>
             </div>
             <div class="card-ecom-title">
               <h3>Card Title</h3>
