feat: ecom-card add

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -109,8 +109,11 @@
           <h2>Ecommerce Card</h2>
           <div class="card card-ecommerce">
             <div class="card-ecom-header">
-              <img src="../../assets/images/simon-lee.jpg" alt="random image" />
-              <i class="fas fa-bookmark">25% off</i>
+              <img src="../../assets/images/pizza-pic.jpg" alt="random image" />
+              <span class="card-ecom-header-offer-icon">
+                <i class="fas fa-bookmark"></i>
+                <p>25% off</p>
+              </span>
             </div>
             <div class="card-ecom-title">
               <h3>Card Title</h3>
@@ -133,10 +136,10 @@
             </div>
             <div class="card-ecom-footer">
               <button class="btn btn-primary">
-                <i class="fas fa-shopping-cart"></i>Add to cart
+                <i class="fas fa-shopping-cart"></i> Add to cart
               </button>
               <button class="btn btn-primary">
-                <i class="fas fa-list-ul"></i>Add to Wishlist
+                <i class="fas fa-list-ul"></i> Add to Wishlist
               </button>
             </div>
           </div>
