--- a/components/card/card.css
+++ b/components/card/card.css
@@ -138,6 +138,9 @@
 .card-text-overlay-header h3,.card-text-overlay-header p {
     margin: 0;
 }
+.card-text-overlay-header h3{
+    font-size: 2.5rem;
+}
 .card-text-overlay-header i {
     font-size: 2rem;
     margin-right: 2rem;
@@ -151,4 +154,63 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+/* || Ecom card  */
+.card-ecommerce{
+    max-width: 30rem;
+}
+.card-ecom-header{
+    display: flex;
+    flex-wrap:wrap;
+    position: relative;
+
+}
+.card-ecom-header img{
+    width: 100%;
+}
+.card-ecom-header-offer-icon{
+    position: absolute;
+    color: white;
+    left: 2rem;
+}
+.card-ecom-header-offer-icon i{
+    font-size: 6rem;
+    color: red;
+    /* background-color: red; */
+}
+.card-ecom-header-offer-icon p{
+    position: absolute;
+    top: 0.5rem;
+    left: 1rem;
+    font-size: 1.5rem;
+    /* margin: 0.5rem; */
+    margin: 0;
+    color: white;
+}
+.card-ecom-title,.card-ecom-price,.card-ecom-footer{
+    margin: 1rem;
+}
+.card-ecom-title h3{
+    font-size: 2.3rem;
+}
+.card-ecom-title p,.card-ecom-title h3{
+    margin: 0;
+}
+.card-ecom-title p{
+    color: grey;
+    font-size: 1.2rem;
+}
+.card-ecom-price,.price-show,.price-change{
+    display: flex;
+    flex-wrap:wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.price-show{
+    font-size: 2rem;
+}
+.price-show p{
+    margin: 0.7rem;
+    color: red;
 }
