feat: card component add

--- a/components/card/card.html
+++ b/components/card/card.html
@@ -17,6 +17,10 @@
         <h1>Cards</h1>
         <div class="card-container">
           <h2>Basic Card</h2>
+          <p>
+            The Basic Card component comes with a Title, a Card Body and a
+            button at the end.
+          </p>
           <div class="card card-basic">
             <h3>Card Title</h3>
             <p>
@@ -25,9 +29,13 @@
             </p>
             <button class="btn btn-secondary">Button</button>
           </div>
-
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fbasic-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Social Media Card</h2>
-          <!-- continue from here -->
+          <p>
+            The Social Media Card component comes with a Username and Avatar, a
+            Card Image, a Body and a few buttons at the end. All the avatar
+            class can be applied here according to your preference.
+          </p>
           <div class="card card-social-media">
             <div class="card-media-header">
               <div class="card-media-first avatar avatar-sm">
@@ -57,8 +65,12 @@
               </div>
             </div>
           </div>
-
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fsocial-media.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Dismissible Image Card</h2>
+          <p>
+            The Image Card component comes with an Image, a close button, a
+            Title, a Subtitle, a Card Body and a few buttons at the end.
+          </p>
           <div class="card card-dismiss">
             <div class="card-dismiss-img">
               <img src="../../assets/images/simon-lee.jpg" alt="random image" />
@@ -81,8 +93,12 @@
               </div>
             </div>
           </div>
-
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fdismiss-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Text Overlay Card</h2>
+          <p>
+            The Text Overlay Card component comes with a Title, a Subtitle, an
+            Image Background, a caption text and a few buttons at the end.
+          </p>
           <div class="card card-text-overlay">
             <img src="../../assets/images/simon-lee.jpg" alt="random image" />
             <div class="card-text-overlay-header">
@@ -105,8 +121,13 @@
               </div>
             </div>
           </div>
-
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Ftext-overlay.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Ecommerce Card</h2>
+          <p>
+            The E-Commerce Card component comes with an Image, Product Title, a
+            Product Category, Price Tag, a OFF Badge and a few buttons at the
+            end.
+          </p>
           <div class="card card-ecommerce">
             <div class="card-ecom-header">
               <img src="../../assets/images/pizza-pic.jpg" alt="random image" />
@@ -143,6 +164,7 @@
               </button>
             </div>
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fecom-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
       </div>
     </main>
