--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,7 +1,10 @@
 @import url(../../css/main.css);
 @import url(../button/button.css);
 @import url(../avatar/avatar.css);
-
+:root{
+    --white:white;
+    --grey:grey;
+}
 /* || Basic card component  */
 .card {
     border-radius: 0.5rem;
@@ -19,7 +22,7 @@
     font-size: 2.5rem;
 }
 .card-basic p {
-    color: grey;
+    color: var(--grey);
     font-size: 1.3rem;
 }
 /* || Social media card  */
@@ -47,7 +50,7 @@
 }
 .card-media-first P{
     font-size: 1.3rem;
-    color: grey;
+    color: var(--grey);
 }
 .card-media-first h3{
     font-size: 2.7rem;
@@ -89,7 +92,7 @@
     top: 0;
     right: 0;
     margin: 0.7rem;
-    color: white;
+    color: var(--white);
 }
 .card-dismiss-title{
     margin:1rem;
@@ -101,7 +104,7 @@
 .card-dismiss-title p{
     margin: 0rem 1rem;
     font-size: 1.3rem;
-    color: grey;
+    color: var(--grey);
 }
 .card-dismiss-content{
     margin: 1rem;
@@ -131,7 +134,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: var(--white);
     position: absolute;
     top: 0;
 }
@@ -149,8 +152,7 @@
 .card-text-overlay-footer .card-icons{
     position: absolute;
     bottom: 0;
-    color: white;
-    /* justify-content: space-between; */
+    color: var(--white);
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -171,22 +173,20 @@
 }
 .card-ecom-header-offer-icon{
     position: absolute;
-    color: white;
+    color: var(--white);
     left: 2rem;
 }
 .card-ecom-header-offer-icon i{
     font-size: 6rem;
     color: red;
-    /* background-color: red; */
 }
 .card-ecom-header-offer-icon p{
     position: absolute;
     top: 0.5rem;
     left: 1rem;
     font-size: 1.5rem;
-    /* margin: 0.5rem; */
     margin: 0;
-    color: white;
+    color: var(--white);
 }
 .card-ecom-title,.card-ecom-price,.card-ecom-footer{
     margin: 1rem;
@@ -198,7 +198,7 @@
     margin: 0;
 }
 .card-ecom-title p{
-    color: grey;
+    color: var(--grey);
     font-size: 1.2rem;
 }
 .card-ecom-price,.price-show,.price-change{
