feat: input code snippets add

--- a/components/image/image.html
+++ b/components/image/image.html
@@ -25,6 +25,7 @@
               alt="flower"
             />
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-res.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           <div class="image-round-container">
             <h2>Image Round</h2>
             <p>
@@ -37,6 +38,7 @@
               alt="flower"
             />
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-round.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
       </div>
     </main>
