--- a/components/input/input.css
+++ b/components/input/input.css
@@ -4,6 +4,7 @@
     --success:green;
     --error:red;
     --basic:black;
+    --disabled:grey;
 }
 
 .input{
@@ -50,4 +51,13 @@
 }
 .input-success:focus{
     outline-color: var(--success);
+}
+.label-disabled{
+    color: var(--disabled);
+}
+
+/* || text area  */
+.textarea{
+    padding: 1rem;
+    font-size: 1.5rem;
 }
