--- a/components/input/input.html
+++ b/components/input/input.html
@@ -13,9 +13,13 @@
         <h1>Inputs</h1>
 
         <h2>Basic Input and Validation Input</h2>
+        <p>
+          Three types of styles can be applied i.e basic, error, success using
+          following class in the given code.
+        </p>
         <div class="input-container">
           <div class="input-cont input-basic-container">
-            <label class="input-label" for="input">Username *</label>
+            <label class="input-label" for="input">Username</label>
             <input
               placeholder="Enter username"
               class="input input-basic"
@@ -25,7 +29,7 @@
           </div>
           <div class="input-cont input-error-container">
             <label class="label-error input-label" for="input-error"
-              >Password *</label
+              >Password</label
             >
             <input
               placeholder="Enter password"
@@ -40,7 +44,7 @@
 
           <div class="input-cont input-success-container">
             <label class="label-success input-label" for="input"
-              >Password *</label
+              >Password</label
             >
             <input
               placeholder="Enter password"
@@ -51,6 +55,7 @@
             <p class="success-message input-message">* Password verified!</p>
           </div>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Finput%2Fbasic-valid.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Text Area</h2>
         <div class="input-container">
           <textarea
@@ -60,7 +65,12 @@
             rows="10"
           ></textarea>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Finput%2Ftext-area.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Radio Input</h2>
+        <p>
+          Radio inputs allows user to select one option from predefined set of
+          multiple options.
+        </p>
         <div class="input-container">
           <input
             class="normal-radio-input"
@@ -87,9 +97,16 @@
             type="radio"
             disabled
           />
-          <label for="radio-input-disabled">Radio 3</label>
+          <label class="label-disabled" for="radio-input-disabled"
+            >Radio 3</label
+          >
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Finput%2Fradio.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Checkbox Input</h2>
+        <p>
+          The checkbox is shown as a square box that is ticked (checked) when
+          activated.
+        </p>
         <div class="input-container">
           <input
             type="checkbox"
@@ -114,8 +131,9 @@
             id="checkbox-3"
             disabled
           />
-          <label for="checkbox-3">Checkbox-3</label>
+          <label class="label-disabled" for="checkbox-3">Checkbox-3</label>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Finput%2Fcheckbox.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
       </div>
     </main>
   </body>
