feat:index link add + code snippet add

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -40,6 +40,10 @@
             </div>
           </div>
         </div>
+        <h2>Html code</h2>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+        <h2>Js code</h2>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fmodal%2Fbasic-modal.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
       </div>
     </main>
     <script src="./modal.js"></script>
