--- a/components/toast/toast.html
+++ b/components/toast/toast.html
@@ -25,6 +25,7 @@
             Primary Toast!
           </div>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Fprimary.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Success Toast</h2>
         <div class="success-container">
           <button value="alert-success" class="btn click-success">
@@ -35,6 +36,7 @@
             Success Toast!
           </div>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Fsuccess.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Warning Toast</h2>
         <div class="warning-container">
           <button value="alert-warning" class="btn click-warning">
@@ -45,6 +47,7 @@
             Warning Toast!
           </div>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Fwarning.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         <h2>Danger Toast</h2>
         <div class="danger-container">
           <button value="alert-danger" class="btn click-danger">
@@ -55,6 +58,7 @@
             Danger Toast!
           </div>
         </div>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Fdanger.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
       </div>
     </main>
     <script src="./toast.js"></script>
