--- a/components/toast/toast.html
+++ b/components/toast/toast.html
@@ -59,6 +59,8 @@
           </div>
         </div>
         <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Fdanger.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+        <h2>JavaScript code</h2>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Ftoast%2Ftoast.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
       </div>
     </main>
     <script src="./toast.js"></script>
