feat : code snippet + discription add

--- a/components/navigation/nav.html
+++ b/components/navigation/nav.html
@@ -16,9 +16,14 @@
     <main>
       <div class="wrapper">
         <h1>Navigation</h1>
+        <p>
+          Navigation is at the top of the page and helps users to navigate
+          throught the page
+        </p>
         <a href="./wholeNav.html">
           <button class="btn btn-primary">Click for Nav</button>
         </a>
+        <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fnavigation%2Fnavigation.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
       </div>
     </main>
   </body>
