--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./alert.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <link rel="stylesheet" href="../button/button.css" />
+    <title>Sharp UI | Alert</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./alert.css">
-    <title>Sharp UI|Alert</title>
-</head>
-
-<body>
-    <main>
-        <div class="wrapper">
-            <h1>Alert</h1>
-            <p>An alert displays a short, important message in a way that attracts the user's attention without
-                interrupting the user's task.</p>
-            <h2>Simple Alerts</h2>
-            <div class="alert-container">
-                <div class="alert alert-info"><i class="fas fa-info-circle"></i>A info alert example!</div>
-                <div class="alert alert-success">
-                    <i class="fas fa-check-circle"></i>A success alert example!
-                </div>
-                <div class="alert alert-warning"><i class="fas fa-exclamation-triangle"></i>A warning alert example!
-                </div>
-                <div class="alert alert-danger"><i class="fas fa-exclamation-circle"></i>A danger alert example!</div>
-            </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28184%2C0%2C0%2C1%29&t=base16-light&wt=none&l=css&width=680&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522alert%2520alert-info%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-info-circle%2522%253E%253C%252Fi%253E%250A%2520%2520A%2520info%2520alert%2520example%21%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520alert-success%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-check-circle%2522%253E%253C%252Fi%253E%250A%2520%2520A%2520success%2520alert%2520example%21%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520alert-warning%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-exclamation-triangle%2522%253E%253C%252Fi%253E%250A%2520%2520A%2520warning%2520alert%2520example%21%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert%2520alert-danger%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-exclamation-circle%2522%253E%253C%252Fi%253E%250A%2520%2520A%2520danger%2520alert%2520example%21%250A%253C%252Fdiv%253E"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
         </div>
-    </main>
-</body>
-
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Alert</h1>
+          <p>
+            An alert displays a short, important message in a way that attracts
+            the user's attention without interrupting the user's task.
+          </p>
+          <h2>Simple Alerts</h2>
+          <div class="alert-container">
+            <div class="alert alert-info">
+              <i class="fas fa-info-circle"></i>A info alert example!
+            </div>
+            <div class="alert alert-success">
+              <i class="fas fa-check-circle"></i>A success alert example!
+            </div>
+            <div class="alert alert-warning">
+              <i class="fas fa-exclamation-triangle"></i>A warning alert
+              example!
+            </div>
+            <div class="alert alert-danger">
+              <i class="fas fa-exclamation-circle"></i>A danger alert example!
+            </div>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Falert%2Falert.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
