--- a/components/badge/badge.html
+++ b/components/badge/badge.html
@@ -1,51 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/1a8e4103d5.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Badge | Sharp UI</title>
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <link rel="stylesheet" href="./badge.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
-    <title>Badge|Sharp UI</title>
-    <link rel="stylesheet" href="./badge.css">
-</head>
-
-<body>
-    <main>
-        <div class="wrapper">
-            <h1>Badge</h1>
-            <p>Badges are being used to display a notification count or status information</p>
-            <h2>Status Badge</h2>
-            <div class="avatar-container">
-                <div class="avatar avatar-xl badge-container">
-                    <img src="../../assets/images/avatar-svgrepo-com.svg" alt="avatar large,online mode">
-                    <span class="badge-lg badge-online"></span>
-                </div>
-                <div class="avatar avatar-md badge-container">
-                    <img src="../../assets/images/female-avatar.svg" alt="avatar medium, offline mode">
-                    <span class="badge-md badge-offline"></span>
-                </div>
-                <div class="avatar avatar-sm badge-container">
-                    <img src="../../assets/images/butler-avatar.svg" alt="avatar small, do not disturb me mode">
-                    <span class="badge-sm badge-invisible"></span>
-                </div>
-            </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28184%2C0%2C0%2C1%29&t=base16-light&wt=none&l=css&width=680&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar-container%2522%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-xl%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522...%2522%2520%2509%2509%2509%2509%2509%250A%2509%2509%2509alt%253D%2522avatar%2520large%252Conline%2520mode%2522%250A%2509%2509%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-lg%2520badge-online%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-md%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522...%2522%2520%250A%2509%2509%2509alt%253D%2522avatar%2520medium%252C%2520offline%2520mode%2522%250A%2509%2509%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-md%2520badge-offline%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%2509%253Cdiv%2520class%253D%2522avatar%2520avatar-sm%2520badge-container%2522%253E%250A%2509%2509%253Cimg%2520%250A%2509%2509%2509src%253D%2522...%2522%2520%250A%2509%2509%2509alt%253D%2522avatar%2520small%252C%2520do%2520not%2520disturb%2520me%2520mode%2522%250A%2509%2509%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-sm%2520badge-invisible%2522%253E%253C%252Fspan%253E%250A%2509%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-            </iframe>
-            <h2>Badges on icons</h2>
-            <div class="badge-container">
-                <i class="fas fa-bell"><span class="badge-count">8</span></i>
-                <i class="fas fa-shopping-cart"><span class="badge-count">7</span></i>
-            </div>
-            <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28184%2C0%2C0%2C1%29&t=base16-light&wt=none&l=css&width=680&ds=true&dsyoff=23px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=15.5px&lh=166%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522badge-container%2522%253E%250A%2509%253Ci%2520class%253D%2522fas%2520fa-bell%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-count%2522%253E8%253C%252Fspan%253E%250A%2509%253C%252Fi%253E%250A%2509%253Ci%2520class%253D%2522fas%2520fa-shopping-cart%2522%253E%250A%2509%2509%253Cspan%2520class%253D%2522badge-count%2522%253E7%253C%252Fspan%253E%250A%2509%253C%252Fi%253E%250A%253C%252Fdiv%253E"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1>Sharp UI</h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
+    </div>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../avatar/avatar.html">Avatar</a>
+          <a href="../alert/alert.html">Alert</a>
+          <a href="../badge/badge.html">Badge</a>
+          <a href="../button/button.html">Button</a>
+          <a href="../card/card.html">Card</a>
+          <a href="../image/image.html">Image</a>
+          <a href="../input/input.html">Input</a>
+          <a href="../modal/modal.html">Modal</a>
+          <a href="../toast/toast.html">Toast</a>
+          <a href="../rating/rating.html">Rating</a>
+          <a href="../navigation/nav.html">Navigation</a>
+          <a href="../grid/grid.html">Grid</a>
         </div>
-    </main>
-</body>
-
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Badge</h1>
+          <p>
+            Badges are being used to display a notification count or status
+            information
+          </p>
+          <h2>Status Badge</h2>
+          <div class="avatar-container">
+            <div class="avatar avatar-xl badge-container">
+              <img
+                src="../../assets/images/avatar-svgrepo-com.svg"
+                alt="avatar large,online mode"
+              />
+              <span class="badge-lg badge-online"></span>
+            </div>
+            <div class="avatar avatar-md badge-container">
+              <img
+                src="../../assets/images/female-avatar.svg"
+                alt="avatar medium, offline mode"
+              />
+              <span class="badge-md badge-offline"></span>
+            </div>
+            <div class="avatar avatar-sm badge-container">
+              <img
+                src="../../assets/images/butler-avatar.svg"
+                alt="avatar small, do not disturb me mode"
+              />
+              <span class="badge-sm badge-invisible"></span>
+            </div>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbadge%2Fstatus-badge.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+          <h2>Badges on icons</h2>
+          <div class="badge-container">
+            <i class="fas fa-bell"><span class="badge-count">8</span></i>
+            <i class="fas fa-shopping-cart"
+              ><span class="badge-count">7</span></i
+            >
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbadge%2Fbadge-icon.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
